# worms-sfml

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
Cmake/: build_configuration.cmake
Engine/: CMakeLists.txt  CollisionUtils.h  MathUtils.h  PolygonHelper.h  VectorUtils.h  test.cpp  test.h
Engine/Components/: GraphicsComponent.h  InputComponent.h  PhysicsComponent.h
Engine/Dictionaries/: Dictionary.h  FontsDictionary.h  MusicsDictionary.h  SoundBuffersDictionary.h  TexturesDictionary.h
Engine/Dictionary/: Dictionary.h
Engine/Game/: Game.cpp  Game.h
Engine/GameObject/: GameObject.h
Engine/Scene/: Scene.cpp  Scene.h
Engine/Utility/: CollisionUtils.cpp  CollisionUtils.h  MathUtils.cpp  MathUtils.h  PolygonHelper.cpp  PolygonHelper.h  RTTI.h  VectorUtils.cpp  VectorUtils.h
Game/: CMakeLists.txt  main.cpp
Game/Assets/: GameColors.h
Game/Components/GraphicsComponents/: GCVoid.cpp  GCVoid.h
Game/Components/GraphicsComponents/UI/Buttons/: GCButton.cpp  GCButton.h
Game/Components/InputComponents/: ICVoid.cpp  ICVoid.h
Game/Components/InputComponents/UI/Buttons/: ICButton.cpp  ICButton.h
Game/Components/PhysicsComponents/: PCVoid.cpp  PCVoid.h
Game/Components/PhysicsComponents/UI/Buttons/: PCButton.cpp  PCButton.h
Game/GameObjects/PhysicsObjects/: FallingCircle.cpp  FallingCircle.h  GCFallingCircle.cpp  PCFallingCircle.cpp  PCFallingCircle.h
Game/GameObjects/PhysicsObjects/BlackHole/: BlackHole.cpp  BlackHole.h  GCBlackHole.cpp  GCBlackHole.h  PCBlackHole.cpp  PCBlackHole.h
Game/GameObjects/PhysicsObjects/Collectibles/Banana/: BananaCollectible.cpp  BananaCollectible.h  GCBananaCollectible.cpp  GCBananaCollectible.h
Game/GameObjects/PhysicsObjects/FallingBox/: FallingBox.cpp  FallingBox.h  FallingBoxRB.cpp  GCFallingBox.h  GCFallingbox.cpp  PCFallingBox.cpp
Game/GameObjects/PhysicsObjects/FallingBox.h/: FallingBoxRB.cpp  PCFallingBox.cpp  PCFallingBox.h
Game/GameObjects/PhysicsObjects/FallingCircle/: FallingCircle.cpp  FallingCircle.h  FallingCircleRB.cpp  GCFallingCircle.cpp  GCFallingCircle.h  PCFallingCircle.cpp  PCFallingCircle.h
Game/GameObjects/PhysicsObjects/ForceVolume/: BlackHoleForceVolume.h  ForceVolume.cpp  ForceVolume.h  PCForceVolume.cpp  PCForceVolume.h
Game/GameObjects/PhysicsObjects/PhysicsWorld/: PCPhysicsWorld.cpp  PhysicsWorld.cpp  PhysicsWorld.h
Game/GameObjects/PhysicsObjects/Projectiles/CircleExplosion/: CircleExplosion.cpp  CircleExplosion.h  GCCircleExplosion.cpp  GCCircleExplosion.h  PCCircleExplosion.cpp  PCCircleExplosion.h
Game/GameObjects/PhysicsObjects/Projectiles/FragmentationBall/: FragmentationBall.cpp  FragmentationBall.h
Game/GameObjects/PhysicsObjects/Projectiles/FragmentationBall/ExplosionFragments/: ExplosionFragment.cpp  ExplosionFragment.h
Game/GameObjects/PhysicsObjects/Projectiles/Grenade/: GCGrenade.cpp  GCGrenade.h  Grenade.cpp  Grenade.h  PCGrenade.cpp  PCGrenade.h
Game/GameObjects/PhysicsObjects/Terrain/: GCTerrain.cpp  PCTerrain.cpp  PCTerrain.h  Terrain.cpp  Terrain.h
Game/GameObjects/Player/: GCPlayer.cpp  GCPlayer.h  ICPlayer.cpp  ICPlayer.h  PCPlayer.cpp  PCPlayer.h  Player.cpp  Player.h
Game/GameObjects/RigidBodies/FallingBox/: FallingBoxRB.cpp  FallingBoxRB.h  PCFallingBox.cpp
Game/GameObjects/RigidBodies/FallingCircle/: FallingCircleRB.cpp  FallingCircleRB.h  PCFallingCircle.cpp
Game/GameObjects/RigidBodies/Terrain/: GCTerrain.cpp  GCTerrain.h  PCTerrain.cpp  TerrainRB.cpp  TerrainRB.h
Game/GameObjects/Terrain/: GCTerrain.h  PCTerrain.cpp  PCTerrain.h  Terrain.cpp  Terrain.h
Game/GameObjects/UI/: HUD.cpp  HUD.h
Game/GameObjects/UI/Buttons/: Button.cpp  Button.h  Options.cpp  Options.h
Game/GameObjects/UI/Informations/: MapInfo.cpp  MapInfo.h
Game/Physics/: CollisionExternalDispatcher.h  IRigidBody.cpp  IRigidBody.h  PCPhysicsWorld.cpp  PCPhysicsWorld.h  PhysicsProperties.h  PhysicsWorld.cpp  PhysicsWorld.h  WorldCollisionExternalDispatcher.h
Game/Physics/RigidBodies/: BoxRigidBody.cpp  BoxRigidBody.h  CircleRigidBody.cpp  CircleRigidBody.h  IRigidBody.cpp  IRigidBody.h  TerrainRigidBody.cpp  TerrainRigidBody.h
Game/Scenes/: GameScene.cpp  GameScene.h  MainGameScene.cpp  MainGameScene.h  MainMenuScene.cpp  MainMenuScene.h  SceneEnum.h
Game/Terrain/: GCTerrain.cpp  Terrain.cpp  Terrain.h
Tools/: CMakeLists.txt  MathUtils.h  Typelist.h
Tools/DesignPatterns/: Composite.h  Factory.h  Singleton.h
